[package]
name = "trie_db_impl_vsdb"
version = "0.4.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An out-of-box wraper of the `trie_db` crate"
homepage = "https://github.com/rust-util-collections/trie-db-impl-vsdb"
repository = "https://github.com/rust-util-collections/trie-db-impl-vsdb"

[dependencies]
ruc = "4.1.0"
backend = { package = "hash-db-impl-vsdb", version = "0.3.1", default-features = false }

sp-trie = "19.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["sled_engine", "bcs_codec"]

sled_engine = ["backend/sled_engine"]
rocks_engine = ["backend/rocks_engine"]

bcs_codec = ["backend/bcs_codec"]
json_codec = ["backend/json_codec"]
msgpack_codec = ["backend/msgpack_codec"]
